missing changed for the last commit and README updates